validation to the routes

--- a/contactsProject/package.json
+++ b/contactsProject/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-validator": "^7.3.0",
     "mongodb": "^6.20.0",
     "swagger-ui-express": "^5.0.1"
   },
